plugins {
    id 'java'
    id 'checkstyle'
    id 'org.springframework.boot' version '3.4.13'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.triagain'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

checkstyle {
    toolVersion = '10.21.1'
    configFile = file('config/checkstyle/triagain-checkstyle-rules.xml')
    configProperties = [
        'suppressionFile': file('config/checkstyle/triagain-checkstyle-suppressions.xml').absolutePath
    ]
    ignoreFailures = false
    maxWarnings = 0
}

// 테스트 소스는 전용 서프레션을 쓴다 — 한글 테스트·스텝명 면제(MethodName·Abbreviation)가
// main 으로 새면 안 되기 때문이다. 이 분기는 .claude/hooks/checkstyle-hook.sh 와 짝이다.
// ⚠️ configProperties 를 재대입하면 위 checkstyle 확장(L25-27)의 값이 통째로 덮인다.
//    지금은 프로퍼티가 suppressionFile 하나뿐이라 문제없지만, 늘어나면 여기도 같이 고쳐야 한다.
tasks.named('checkstyleTest') {
    configProperties = [
        'suppressionFile': file('config/checkstyle/triagain-checkstyle-suppressions-test.xml').absolutePath
    ]
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // MyBatis
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.5'

    // AWS S3
    implementation platform('software.amazon.awssdk:bom:2.31.3')
    implementation 'software.amazon.awssdk:s3'

    // Firebase Admin SDK (FCM)
    implementation 'com.google.firebase:firebase-admin:9.4.3'

    // Spring Retry
    implementation 'org.springframework.retry:spring-retry'
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // Swagger UI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

    // Database
    runtimeOnly 'org.postgresql:postgresql'

    // Flyway
    implementation 'org.flywaydb:flyway-core'
    runtimeOnly 'org.flywaydb:flyway-database-postgresql'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testRuntimeOnly 'com.h2database:h2'

    // Cucumber
    testImplementation 'io.cucumber:cucumber-java:7.17.0'
    testImplementation 'io.cucumber:cucumber-spring:7.17.0'
    testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.17.0'
    testImplementation 'org.junit.platform:junit-platform-suite:1.10.2'

    // REST-Assured
    testImplementation 'io.rest-assured:rest-assured:5.5.0'

    // Testcontainers
    testImplementation platform('org.testcontainers:testcontainers-bom:1.21.3')
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
}

tasks.named('test') {
    useJUnitPlatform {
        excludeTags 'e2e'
    }
}

tasks.register('e2eTest', Test) {
    description = 'E2E 해피패스 테스트만 실행'
    group = 'verification'
    useJUnitPlatform {
        includeTags 'e2e'
        includeEngines 'junit-jupiter'
    }
}
